--- a/src/OSSConfiguration/ControlSettings.json
+++ b/src/OSSConfiguration/ControlSettings.json
@@ -50,9 +50,10 @@
          },
          {
             "ResourceType": "VirtualMachine",
-            "ControlIds": [
-               "Azure_VirtualMachine_SI_Missing_OS_Patches"
-            ]
+          "ControlIds": [
+            "Azure_VirtualMachine_SI_Missing_OS_Patches",
+            "Azure_VirtualMachine_SI_Enable_Antimalware"
+          ]
          }
       ],
       "SubscriptionControlIdList": [
