Added fuctions - isControlAttestable and ComputeEligibleAttestationState. Added Attestation Status Hash Map in Constants.ps1 Added DefaultValidAttestationStates in ControlSettings.json

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -253,6 +253,7 @@
     "TimeOut": 60,
     "APIVersion": "2014-01"
   },
+  "DefaultValidAttestationStates": ["NotAnIssue","WillFixLater","WillNotFix"],
   "NewControlGracePeriodInDays": {
       "Default": 60,
       "ControlSeverity": {
