--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -184,6 +184,20 @@
         "queue",
         "table"
       ]
+    },
+    {
+      "Kind": "StorageV2",
+      "Services": [
+        "blob",
+        "file",
+        "queue",
+        "table"
+      ],
+      "DiagnosticsLogServices": [
+        "blob",
+        "queue",
+        "table"
+      ]
     }
   ],
   "AppService": {
