Added mapping for StorageV2 in ControlSettings.json  - Added "StorageV2" kind in Storage Kind mapping  - Added "Zone-redundant storage" in Storage diagnostics mapping

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -184,6 +184,20 @@
         "queue",
         "table"
       ]
+    },
+    {
+      "Kind": "StorageV2",
+      "Services": [
+        "blob",
+        "file",
+        "queue",
+        "table"
+      ],
+      "DiagnosticsLogServices": [
+        "blob",
+        "queue",
+        "table"
+      ]
     }
   ],
   "AppService": {
@@ -197,7 +211,8 @@
   "StorageDiagnosticsSkuMapping": [
     "StandardGRS",
     "StandardLRS",
-    "StandardRAGRS"
+    "StandardRAGRS",
+    "StandardZRS"
   ],
   "StorageAlertSkuMapping": [
     "StandardGRS",
