--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -40,8 +40,7 @@
           "AppService",
           "FunctionApp"
         ],
-        "Enabled": true,
-        "GraceExpiryDate": "2018-06-15"
+        "Enabled": true
       },
       {
         "ControlID": "Azure_AppService_AuthN_Use_AAD_for_Client_AuthN",
