Updated databricks controls

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -18,6 +18,9 @@
   "ERvNet": {
     "ResourceLockLevel": "ReadOnly"
   },
+  "Databricks": {
+    "Tenant_Domain" : "microsoft.com"
+  },
   "VirtualMachine": {
     "Windows": {
       "SupportedSkuList": [],
