--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -323,7 +323,7 @@
           "FixControlImpact": "Low"
         },
         "PolicyDefinitionGuid":"752c6934-9bcc-4749-b004-655e676ae2ac",
-        "PolicyDefnResourceIdSuffix": "config/web"
+        "PolicyDefnResourceIdSuffix": "/config/web"
       },
       {
         "ControlID": "Azure_AppService_BCDR_Configure_Auto_Healing",
