--- a/src/AzSK/Framework/Configurations/SVT/Services/LogicApps.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/LogicApps.json
@@ -140,6 +140,7 @@
         "Diagnostics"
       ],
       "PolicyDefinitionGuid":"34f95f76-5386-4de7-b824-0d8478470c9d",
+      "policyDefinitionId": "/providers/Microsoft.Authorization/policyDefinitions/34f95f76-5386-4de7-b824-0d8478470c9d",
       "Enabled": true
     },
     {
