--- a/src/AzSK/Framework/Configurations/SVT/Services/LogicApps.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/LogicApps.json
@@ -131,7 +131,7 @@
       "Automated": "Yes",
       "MethodName": "CheckDiagnosticsSettings",
       "Rationale": "Logs should be retained for a long enough period so that activity trail can be recreated when investigations are required in the event of an incident or a compromise. A period of 1 year is typical for several compliance requirements as well.",
-      "Recommendation": "Run command: Set-AzureRmDiagnosticSetting -ResourceId {'ResourceId'} -Enable `$true -StorageAccountId '{StorageAccountId}' -RetentionInDays $($this.ControlSettings.Diagnostics_RetentionPeriod_Min) -RetentionEnabled `$true",
+      "Recommendation": "Run command: Set-AzureRmDiagnosticSetting -ResourceId {'ResourceId'} -Enable `$true -StorageAccountId '{StorageAccountId}' -RetentionInDays $($this.ControlSettings.Diagnostics_RetentionPeriod_Min) -RetentionEnabled `$true. Alternatively, you can also change the diagnostic settings from the Azure Portal by following the steps given here: https://docs.microsoft.com/en-us/azure/monitoring-and-diagnostics/monitoring-archive-diagnostic-logs#archive-diagnostic-logs-using-the-portal",
       "Tags": [
         "SDL",
         "TCP",
@@ -139,6 +139,8 @@
         "Audit",
         "Diagnostics"
       ],
+      "PolicyDefinitionGuid":"34f95f76-5386-4de7-b824-0d8478470c9d",
+      "policyDefinitionId": "/providers/Microsoft.Authorization/policyDefinitions/34f95f76-5386-4de7-b824-0d8478470c9d",
       "Enabled": true
     },
     {
