--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,24 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "PowerShell",
+        "request": "launch",
+        "name": "PowerShell Launch Current File in Temporary Console",
+        "script": "${file}",
+        "args": [],
+        "cwd": "${file}",
+        "createTemporaryIntegratedConsole": true
+    },
+        {
+            "type": "PowerShell",
+            "request": "launch",
+            "name": "PowerShell Launch Current File in Temporary Console",
+            "script": "${file}",
+            "args": [],
+            "cwd": "${file}",
+            "createTemporaryIntegratedConsole": true
+        },
         {
             "type": "PowerShell",
             "request": "launch",
