Revert "Removed commented code"
This reverts commit e38b62528c7433f60c7af34baa3155b653874b4a.

--- a/src/AzSK/Framework/Configurations/AzSkSettings.json
+++ b/src/AzSK/Framework/Configurations/AzSkSettings.json
@@ -1,6 +1,6 @@
 {
    "UseOnlinePolicyStore": true,
-   "OnlinePolicyStoreUrl": "https://localhost:44348/api",   
+   "OnlinePolicyStoreUrl": "#OnlinePolicyStoreUrl#",   
    "EnableAADAuthForOnlinePolicyStore": false,
    "UsageTelemetryLevel": "Anonymous",
    "LocalControlTelemetryKey": "00000000-0000-0000-0000-000000000000",
