--- a/src/AzSK/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Release.json
+++ b/src/AzSK/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Release.json
@@ -4,20 +4,37 @@
     "IsMaintenanceMode":  false,
   "Controls": [
     {
-      "ControlID": "AzureDevOps_Release_AuthN_Use_Cert_Auth_for_SPN",
-      "Description": "Azure Active Directory applications, which used in pipeline, must use certificate based authentication",
+      "ControlID": "AzureDevOps_Release_AuthZ_Min_RBAC_Access",
+      "Description": "All teams/groups must be granted minimum required permissions on release defination",
       "Id": "Release110",
       "ControlSeverity": "High",
-      "Automated": "Yes",
-      "MethodName": "CheckSPNAuthenticationCertificate",
-      "Rationale": "Password/shared secret credentials can be easily shared and hence can be easily compromised. Certificate credentials offer better security.",
-      "Recommendation": "Remove any password credentials from Azure AD Applications and use certificate credentials instead. Run command Remove-AzureADApplicationPasswordCredential -InformationAction '{ActionPreference}' -InformationVariable '{InformationVariable}' -KeyId '{KeyId}' -ObjectId '{ObjectId}'. Refer: https://docs.microsoft.com/en-us/powershell/module/azuread/remove-azureadapplicationpasswordcredential?view=azureadps-2.0, https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-certificate-credentials#register-your-certificate-with-azure-ad",
+      "Automated": "No",
+      "MethodName": "",
+      "Rationale": "Granting minimum access by leveraging RBAC feature ensures that users are granted just enough permissions to perform their tasks. This minimizes exposure of the resources in case of user/service account compromise.",
+      "Recommendation": "",
       "Tags": [
         "SDL",
         "TCP",
         "Automated",
         "AuthZ",
         "RBAC"
+      ],
+      "Enabled": true
+    },
+    {
+      "ControlID": "AzureDevOps_Release_DP_No_PlainText_Secrets_In_Defination",
+      "Description": "Secrets and keys must not be stored as plain text in release variables",
+      "Id": "Release120",
+      "ControlSeverity": "High",
+      "Automated": "Yes",
+      "MethodName": "CheckCredInVariables",
+      "Rationale": "Keeping secrets such as connection strings, passwords, keys, etc. in clear text can lead to easy compromise. Making them secret type variables ensures that they are protected at rest.",
+      "Recommendation": "",
+      "Tags": [
+        "SDL",
+        "TCP",
+        "Manual",
+        "Audit"       
       ],
       "Enabled": true
     }
