changes as recommended

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -325,8 +325,8 @@
   },
   "ControlSeverity": {
     "Critical": "Critical",
-    "High": "High",
-    "Medium": "Medium",
+    "High": "Important",
+    "Medium": "Moderate",
     "Low": "Low"
   }
 }
