--- a/src/AzSK/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
+++ b/src/AzSK/Framework/Configurations/SVT/AzureDevOps/AzureDevOps.Project.json
@@ -11,7 +11,7 @@
       "Automated": "Yes",
       "MethodName": "CheckPublicProjects",
       "Rationale": "Data/content in projects that have public visibility can be downloaded by anyone on the internet without authentication. This can lead to a compromise of corporate data.",
-      "Recommendation": "https://docs.microsoft.com/en-us/azure/devops/organizations/accounts/access-with-azure-ad?view=vsts",
+      "Recommendation": "Refer: https://docs.microsoft.com/en-us/azure/devops/organizations/public/make-project-public?view=vsts&tabs=new-nav",
       "Tags": [
         "SDL",
         "TCP",
@@ -27,13 +27,13 @@
         "ControlSeverity": "High",
         "Automated": "No",
         "MethodName": "",
-        "Rationale": "Non-AD accounts (such as xyz@hotmail.com, pqr@outlook.com, etc.) present at any scope within a Organization subject your cloud assets to undue risk. These accounts are not managed to the same standards as enterprise tenant identities. They don't have multi-factor authentication enabled. Etc.",
-        "Recommendation": "",
+        "Rationale": "Granting minimum access by leveraging RBAC feature ensures that users are granted just enough permissions to perform their tasks. This minimizes exposure of the resources in case of user/service account compromise.",
+        "Recommendation": "Refer: https://docs.microsoft.com/en-us/azure/devops/organizations/security/set-project-collection-level-permissions?view=vsts&tabs=new-nav",
         "Tags": [
           "SDL",
           "TCP",
-          "Automated",
-          "SI"
+          "Manual",
+          "AuthZ"
         ],
         "Enabled": true
       },
@@ -45,11 +45,11 @@
         "Automated": "No",
         "MethodName": "",
         "Rationale": "Accounts that are a member of these groups without a legitimate business reason increase the risk for your Organization. By carefully reviewing and removing accounts that shouldn't be there in the first place, you can avoid attacks if those accounts are compromised.",
-        "Recommendation": "",
+        "Recommendation": "Go to Project Settings --> Security --> Select Teams/Group --> Verify Members",
         "Tags": [
           "SDL",
           "TCP",
-          "Automated",
+          "Manual",
           "AuthZ"
         ],
         "Enabled": true
