Removed value for variablesToSkip

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -268,7 +268,7 @@
   },
   "Automation": {
     "WebhookValidityInDays": 60,
-    "variablesToSkip": ["AppResourceGroupNames","OMSSharedKey","OMSWorkspaceId","ReportsStorageAccountName","UpdateToLatestAzSKVersion"]
+    "variablesToSkip": []
   },
   "BaselineControls": {
     "ResourceTypeControlIdMappingList": [
