Tag based filtering for locked resources

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -252,6 +252,12 @@
     "StandardGRS",
     "StandardRAGRS"
   ],
+  "LockedResourcesTags": [
+    {
+       "TagName": "application",
+       "TagValue": "databricks"
+    }
+  ],
   "RedisCache": {
     "FirewallApplicableSku": [
       "Premium"
